# OMSimulator-3rdParty

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CTPL/: CMakeLists.txt
FMIL/: .gitignore  CMakeLists.txt
FMIL/Config.cmake/: fmicapi.cmake  fmixml.cmake  fmizip.cmake
FMIL/Config.cmake/Minizip/: CMakeLists.txt
FMIL/src/CAPI/include/FMI1/: fmi1_capi.h
FMIL/src/CAPI/include/FMI2/: fmi2_capi.h
FMIL/src/CAPI/src/FMI2/: fmi2_capi.c
FMIL/src/Import/include/FMI/: fmi_import_context.h
FMIL/src/Import/include/FMI2/: fmi2_import_capi.h
FMIL/src/Import/src/FMI/: fmi_import_context.c
FMIL/src/Import/src/FMI2/: fmi2_import_capi.c
FMIL/src/Util/src/JM/: jm_portability.c
FMIL/src/XML/src/FMI2/: fmi2_xml_variable.c
Lua/: .gitignore  CMakeLists.txt  Makefile  buildWinVS.bat  buildWinVS14.bat  buildWinVS15.bat
Lua/lua-5.3.4/: CMakeLists.txt
Lua/lua-5.3.4/src/: Makefile  lundump.c
PugiXml/: CMakeLists.txt
RegEx/: CMakeLists.txt  Makefile  OMSRegEx.cpp  RegEx.h
cvode/: CMakeLists.txt
cvode/config/: FindPackageMultipass.cmake  SundialsFortran.cmake  SundialsKLU.cmake  SundialsSuperLUDIST.cmake  SundialsSuperLUMT.cmake  SundialsTrilinos.cmake
fmi4c/: .gitignore  CMakeLists.txt
fmi4c/include/: fmi4c.h  fmi4c_functions_fmi3 - Copy.h
fmi4c/src/: fmi4c.c  fmi4c_private.h  fmi4c_utils.c
imgui/: CMakeLists.txt
json/: CMakeLists.txt  json.hpp
kinsol/: .gitignore
kinsol/config/: SundialsFortran.cmake  SundialsMPI.cmake
kinsol/src/: CMakeLists.txt
libxml2/: .gitignore  CMakeLists.txt  Makefile.am  buildWinVS.bat  configure.ac  libxml.spec.in
libxml2/win32/: rcVersion.h
minizip/src/: CMakeLists.txt  miniunz.c  miniunz.h  minizip.c  minizip.h
pthread/: .gitignore  Makefile  buildWinVS.bat
sundials-5.4.0/: CMakeLists.txt
sundials-5.4.0/config/: FindKLU.cmake  SundialsAddF2003InterfaceLibrary.cmake  SundialsAddTestInstall.cmake  SundialsDeprecated.cmake  SundialsFortran.cmake  SundialsHypre.cmake  SundialsKLU.cmake  SundialsPOSIXTimers.cmake  SundialsTesting.cmake  SundialsXBRAID.cmake  SundialsXSDK.cmake
sundials-5.4.0/src/arkode/: CMakeLists.txt
sundials-5.4.0/src/arkode/fmod/: CMakeLists.txt
sundials-5.4.0/src/arkode/xbraid/: CMakeLists.txt
sundials-5.4.0/src/cvode/: CMakeLists.txt
sundials-5.4.0/src/cvode/fmod/: CMakeLists.txt
sundials-5.4.0/src/cvodes/: CMakeLists.txt
sundials-5.4.0/src/cvodes/fmod/: CMakeLists.txt
sundials-5.4.0/src/ida/: CMakeLists.txt
sundials-5.4.0/src/ida/fmod/: CMakeLists.txt
sundials-5.4.0/src/idas/: CMakeLists.txt
sundials-5.4.0/src/idas/fmod/: CMakeLists.txt
sundials-5.4.0/src/kinsol/: CMakeLists.txt
sundials-5.4.0/src/kinsol/fmod/: CMakeLists.txt
sundials-5.4.0/src/nvector/: CMakeLists.txt
sundials-5.4.0/src/nvector/cuda/: CMakeLists.txt
sundials-5.4.0/src/nvector/manyvector/: CMakeLists.txt
sundials-5.4.0/src/nvector/manyvector/fmod/: CMakeLists.txt
sundials-5.4.0/src/nvector/mpiplusx/: CMakeLists.txt
sundials-5.4.0/src/nvector/mpiplusx/fmod/: CMakeLists.txt
sundials-5.4.0/src/nvector/openmp/: CMakeLists.txt
sundials-5.4.0/src/nvector/openmp/fmod/: CMakeLists.txt
sundials-5.4.0/src/nvector/openmpdev/: CMakeLists.txt
sundials-5.4.0/src/nvector/parallel/: CMakeLists.txt
sundials-5.4.0/src/nvector/parallel/fmod/: CMakeLists.txt
sundials-5.4.0/src/nvector/parhyp/: CMakeLists.txt
sundials-5.4.0/src/nvector/petsc/: CMakeLists.txt
sundials-5.4.0/src/nvector/pthreads/: CMakeLists.txt
sundials-5.4.0/src/nvector/pthreads/fmod/: CMakeLists.txt
sundials-5.4.0/src/nvector/raja/: CMakeLists.txt
sundials-5.4.0/src/nvector/serial/: CMakeLists.txt
sundials-5.4.0/src/nvector/serial/fmod/: CMakeLists.txt
sundials-5.4.0/src/nvector/trilinos/: CMakeLists.txt
sundials-5.4.0/src/sundials/: CMakeLists.txt
sundials-5.4.0/src/sundials/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/band/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/band/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/cusolversp/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/dense/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/dense/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/klu/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/klu/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/lapackband/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/lapackdense/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/pcg/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/pcg/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/spbcgs/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/spbcgs/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/spfgmr/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/spfgmr/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/spgmr/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/spgmr/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/sptfqmr/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/sptfqmr/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/superludist/: CMakeLists.txt
sundials-5.4.0/src/sunlinsol/superlumt/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/band/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/band/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/cusparse/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/dense/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/dense/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/slunrloc/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/sparse/: CMakeLists.txt
sundials-5.4.0/src/sunmatrix/sparse/fmod/: CMakeLists.txt
sundials-5.4.0/src/sunnonlinsol/fixedpoint/: CMakeLists.txt
sundials-5.4.0/src/sunnonlinsol/newton/: CMakeLists.txt
sundials-5.4.0/src/sunnonlinsol/petscsnes/: CMakeLists.txt
sundials-5.4.0/test/: ._testRunner  testRunner
sundials-5.4.0/test/unit_tests/: CMakeLists.txt
sundials-5.4.0/test/unit_tests/arkode/: CMakeLists.txt
tinyfd/: CMakeLists.txt
xerces/: CMakeLists.txt
xerces/cmake/: FindICU.cmake  XercesDLL.cmake
xerces/src/: CMakeLists.txt
zlib/: .gitignore  CMakeLists.txt
zlib/minizip/: miniunz.c  minizip.h
(+2 files in other folders)
